Fixed layout issues

--- a/Day-II-Calculator/calculator/src/App.css
+++ b/Day-II-Calculator/calculator/src/App.css
@@ -1,5 +1,5 @@
-.calc-wrapper {
-    width: 400px;
+.app-container {
+    width: 456px;
     margin: 70px auto;
-    height: 100%;
+    background-color: lightgray;
 }
